enhance openid-connect-issuers to be able to contain a list of issuer urls in the config
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>